// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

(require('./b'): number);

=====================================output=====================================
// @flow

(require("./b"): number);

================================================================================
`;

exports[`b.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

module.exports = "";

=====================================output=====================================
// @flow

module.exports = "";

================================================================================
`;

exports[`test.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

("": number);

=====================================output=====================================
// @flow

("": number);

================================================================================
`;
